# nodevmap

./: .gitignore  CMakeLists.txt  README.md
app/: entry_main.cpp  nvp_app.cpp
app/test/: TEST.cpp  TEST_0.cpp  TEST_01.cpp  nvp_app.cpp  test_common.h  test_plist_01.h  test_plist_02.h  test_plist_03.h  test_plist_04.h  test_plist_05.h
source/: CMakeLists.txt  LOG.md  TEST.cpp  TEST_0.cpp  TEST_01.cpp  TEST_d2d.cpp  TEST_qtz.cpp  base.h  base_element.cpp  base_message.cpp  win_main.cpp  win_message.cpp
source/base/: base.h  base_element.cpp  base_message.cpp  elem_storage.cpp  elem_storage.h  event.h  layout.h  nvp_base.cpp  nvp_base.h  nvp_event.cpp  nvp_layout.cpp
source/base/temp/: base_element.cpp  elem_storage.h  event.h  layout.h  nvp_event.cpp
source/draw/: draw.h  draw_coding.cpp  draw_coding.h  draw_line.cpp  draw_matrix.cpp  draw_matrix.h  draw_priv.h  draw_rect.cpp  draw_text.cpp  nvp_draw.cpp  nvp_draw.h
source/event/: event_mouse.cpp  event_mouse.h  event_view.cpp  event_view.h  nvp_event.cpp  nvp_event.h
source/layout/: layout_priv.cpp  layout_priv.h  nvp_layout.cpp  nvp_layout.h
source/nvp-io/: image_io.cpp  image_io.h  nvp_plist.cpp  nvp_plist.h  pdf_io.cpp  pdf_io.h  plist_io.cpp  plist_io.h
source/port-osx/: CHANGELOG.md  LOG.md  osx_main.mm  osx_message.mm  osx_sys.mm
source/port-osx/quartz/: qtz_common.h  qtz_main.mm
source/port-win/: CHANGELOG.md  LOG.md  win_main.cpp  win_message.cpp  win_sys.cpp
source/port-win/direct2d/: d2d_common.h  d2d_main.cpp
source/util/: nvp_coding.h  nvp_util.cpp  nvp_util.h  util.h
